@@ -1,17 +1,18 @@
 package smartin.miapi.modules.properties.enchanment;
 
+import net.minecraft.world.item.ItemStack;
 import smartin.miapi.modules.ItemModule;
 import smartin.miapi.modules.ModuleInstance;
 import smartin.miapi.modules.material.Material;
 import smartin.miapi.modules.material.MaterialProperty;
+import smartin.miapi.modules.properties.util.DoubleOperationResolvable;
 import smartin.miapi.modules.properties.util.DoubleProperty;
 
 import java.util.List;
+import java.util.Optional;
 import java.util.stream.Collectors;
-import net.minecraft.world.item.ItemStack;
 
 public class EnchantAbilityProperty extends DoubleProperty {
-    //TODO:fully implement this
     public static String KEY = "enchantability";
     public static EnchantAbilityProperty property;
 
@@ -22,12 +23,12 @@ public class EnchantAbilityProperty extends DoubleProperty {
 
     public static double getEnchantAbility(ItemStack itemStack) {
         List<ModuleInstance> moduleInstances = ItemModule.getModules(itemStack).allSubModules();
-        List<Double> enchantAbilities = moduleInstances.stream().map(moduleInstance -> getEnchantAbility(moduleInstance)).sorted().collect(Collectors.toList());
+        List<Double> enchantAbilities = moduleInstances.stream().map(EnchantAbilityProperty::getEnchantAbility).sorted().collect(Collectors.toList());
         if (enchantAbilities.isEmpty()) {
             return 15.0;
         }
         if (enchantAbilities.size() > 1) {
-            enchantAbilities.remove(0);
+            enchantAbilities.removeFirst();
         }
         return enchantAbilities.stream()
                 .mapToDouble(Double::doubleValue)
@@ -36,23 +37,15 @@ public class EnchantAbilityProperty extends DoubleProperty {
     }
 
     public static double getEnchantAbility(ModuleInstance instance) {
-        if (instance.getOldProperties().containsKey(property)) {
-            return Math.max(1, property.getValueForModule(instance, 15.0));
-        }
-        Material material = MaterialProperty.getMaterial(instance);
-        if (material != null) {
-            return Math.max(1, material.getDouble("enchantability"));
+        Optional<DoubleOperationResolvable> resolvableOptional = property.getData(instance);
+        if (resolvableOptional.isPresent()) {
+            return resolvableOptional.get().evaluate(0, 15);
+        } else {
+            Material material = MaterialProperty.getMaterial(instance);
+            if (material != null) {
+                return Math.max(1, material.getDouble("enchantability"));
+            }
         }
         return 15.0;
-    }
-
-    @Override
-    public Double getValue(ItemStack stack) {
-        return getValueRaw(stack);
-    }
-
-    @Override
-    public double getValueSafe(ItemStack stack) {
-        return getValueSafeRaw(stack);
     }
 }
